--- a/boards/arm64/xenvm/xenvm_gicv3_defconfig
+++ b/boards/arm64/xenvm/xenvm_gicv3_defconfig
@@ -19,3 +19,19 @@ CONFIG_UART_XEN_HVC=y
 # Enable logging subsys
 CONFIG_LOG=y
 CONFIG_LOG_MODE_MINIMAL=y
+
+# Added by Gustaf #
+# --------------- #
+# CONFIG_NUM_PIPE_ASYNC_MSGS=10
+CONFIG_KERNEL_MEM_POOL=y
+CONFIG_HEAP_MEM_POOL_SIZE=16384
+
+
+# CONFIG_ARCH_HAS_THREAD_LOCAL_STORAGE=y
+CONFIG_MMU=y
+
+CONFIG_KERNEL_VM_BASE=0x80000000
+CONFIG_KERNEL_VM_OFFSET=0
+CONFIG_KERNEL_VM_SIZE=0x800000
+
+# CONFIG_LOG_MINIMAL=y
