--- a/boards/arm64/xenvm/xenvm.dts
+++ b/boards/arm64/xenvm/xenvm.dts
@@ -47,9 +47,9 @@
 		label = "PSCI";
 	};
 
-	ram: memory@40000000 {
+	ram: memory@80000000 {
 		device_type = "mmio-sram";
-		reg = <0x00 0x40000000 0x00 DT_SIZE_M(16)>;
+		reg = <0x00 0x80000000 0x00 DT_SIZE_M(16)>;
 	};
 
 	gic: interrupt-controller@3001000 {
@@ -79,6 +79,11 @@
 
 	xen_hvc: hvc {
 		compatible = "xen,uart_hvc";
+		status = "okay";
+	};
+
+	xen_can: can {
+		compatible = "xen,can";
 		status = "okay";
 	};
 };
